[gd_scene load_steps=9 format=3 uid="uid://ctjqknlr8e2fv"]

[ext_resource type="Script" uid="uid://bl25jb3asinmo" path="res://Mine/Scripts/Experiences/lightning_chain_gun.gd" id="1_ks6l2"]
[ext_resource type="PackedScene" uid="uid://c8l60rnugru40" path="res://addons/godot-xr-tools/objects/pickable.tscn" id="1_ledl3"]
[ext_resource type="PackedScene" uid="uid://cyiipyx6tugrp" path="res://Mine/Prefabs/Experiences/Tim/lightning_bullet.tscn" id="2_am1g1"]
[ext_resource type="PackedScene" uid="uid://tfa5w35mct5c" path="res://Mine/Models/Tim/LightningGun/LightningChainGun.glb" id="2_esml3"]
[ext_resource type="Script" uid="uid://gyy28q5n22on" path="res://Mine/Scripts/Experiences/rotate_per_second.gd" id="3_esml3"]
[ext_resource type="PackedScene" uid="uid://c25yxb0vt53vc" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_left.tscn" id="3_ks6l2"]
[ext_resource type="PackedScene" uid="uid://da2qgxxwwitl6" path="res://addons/godot-xr-tools/objects/highlight/highlight_ring.tscn" id="4_am1g1"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_w0iw5"]
radius = 1.36171
height = 6.6565

[node name="LightningChainGun" type="Node3D"]
script = ExtResource("1_ks6l2")
BulletPrefab = ExtResource("2_am1g1")

[node name="PickableObject" parent="." instance=ExtResource("1_ledl3")]
gravity_scale = 0.0
release_mode = 1
second_hand_grab = 2

[node name="CollisionShape3D" parent="PickableObject" index="0"]
transform = Transform3D(0.15, 0, 0, 0, -6.55671e-09, -0.15, 0, 0.15, -6.55671e-09, 0, 0, 0)
shape = SubResource("CapsuleShape3D_w0iw5")

[node name="FirePoint" type="Node3D" parent="PickableObject/CollisionShape3D" index="0"]
transform = Transform3D(6.66667, 0, 0, 0, -2.91409e-07, 6.66667, 0, -6.66667, -2.91409e-07, 0, -4.32989, -0.112155)

[node name="LightningChainGun" parent="PickableObject/CollisionShape3D" index="1" instance=ExtResource("2_esml3")]
transform = Transform3D(-1, 0, -8.74228e-08, 8.74228e-08, -4.37114e-08, -1, -3.82137e-15, -1, 4.37114e-08, 0, 2.12931, 1.77426)

[node name="Cores_009" parent="PickableObject/CollisionShape3D/LightningChainGun" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 2.3)
script = ExtResource("3_esml3")
RotateAmount = Vector3(0, 0, 360)

[node name="GrabPointHandLeft" parent="PickableObject" instance=ExtResource("3_ks6l2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.164181, 0.209826)

[node name="HighlightRing" parent="PickableObject" instance=ExtResource("4_am1g1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.164181, 0.209826)

[node name="HighlightRing2" parent="PickableObject" instance=ExtResource("4_am1g1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0804491, -0.0928373)

[node name="GrabPointHandLeft2" parent="PickableObject" instance=ExtResource("3_ks6l2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.164181, 0.209826)
hand = 1

[node name="GrabPointHandLeft3" parent="PickableObject" instance=ExtResource("3_ks6l2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0804491, -0.0928373)
mode = 2
snap_hand = false
drive_position = 0.0
drive_aim = 1.0

[node name="GrabPointHandLeft4" parent="PickableObject" instance=ExtResource("3_ks6l2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0804491, -0.0928373)
hand = 1
mode = 2
snap_hand = false
drive_position = 0.0
drive_aim = 1.0

[connection signal="action_pressed" from="PickableObject" to="." method="_on_pickable_object_action_pressed"]
[connection signal="action_released" from="PickableObject" to="." method="_on_pickable_object_action_released"]
[connection signal="picked_up" from="PickableObject" to="." method="_on_pickable_object_picked_up"]
[connection signal="released" from="PickableObject" to="." method="_on_pickable_object_released"]

[editable path="PickableObject"]
[editable path="PickableObject/CollisionShape3D/LightningChainGun"]
